# indian-funding-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
config/: schemas.py  settings.py  sources.yaml
docs/: index.html  loom_script.md  pre_push_checklist.md  rounds_latest.csv  rounds_latest.json
exports/: sample_rounds.csv  sample_rounds.json  sample_rounds.xlsx
monitoring/: failure_tracker.py  schema_drift.py
pipeline/: dashboard.py  dedup.py  enricher.py  entity_resolution.py  exporter.py  fetcher.py  regex_fallback.py  registry.py  run.py  sectors.py  sheets_export.py  storage.py  validator.py
pipeline/templates/: dashboard.html.j2
scripts/: backfill_entities.py  backfill_sectors.py  probe_entrackr.py  probe_yourstory.py
sources/: base_scraper.py  entrackr.py  inc42.py  moneycontrol.py  vccircle.py  yourstory.py
tests/: test_dashboard.py  test_dedup.py  test_enricher.py  test_entity_resolution.py  test_entrackr_parser.py  test_exporter.py  test_failure_tracker.py  test_inc42_parser.py  test_moneycontrol_parser.py  test_regex_fallback.py  test_schema_drift.py  test_sectors.py  test_validator.py  test_validators.py  test_vccircle_parser.py  test_yourstory_parser.py
tests/fixtures/: entrackr_article_sample.html  entrackr_listing_sample.html  inc42_article_sample.html  inc42_sitemap_sample.xml  yourstory_article_sample.html  yourstory_listing_sample.html
